[package]
name = "toml-query"
version = "0.9.1"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library to work with toml::Value objects more conveniently"

keywords    = ["toml", "extension"]
readme      = "./README.md"
license     = "MPL-2.0"

repository    = "https://github.com/matthiasbeyer/toml-query"

edition = "2018"

[features]
default = []
logging = [ "log" ]
typed = ["serde"]

[dependencies]
toml = "0.5"
is-match = "0.1"
regex = "1.0"
lazy_static = "1.0"
failure        = "0.1"
failure_derive = "0.1"

[dependencies.log]
version = "0.4"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.toml-query_derive]
version = "0.9.0"
path    = "./toml-query_derive/"

[dev-dependencies]
quickcheck = "0.6"
serde_derive = "1"


[workspace]
members = [ "toml-query_derive" ]

