[package]
name = "toml-query"
version = "0.10.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]
edition = "2018"
keywords = ["toml", "extension"]
license = "MPL-2.0"
readme = "./README.md"
repository = "https://github.com/matthiasbeyer/toml-query"
description = "Library to work with toml::Value objects more conveniently"

[features]
default = []
logging = [ "log" ]
typed = ["serde"]

[dependencies]
thiserror = "1"
is-match = "0.1"
lazy_static = "1.4"
regex = "1.3"
toml = "0.5"

[dependencies.log]
version = "0.4"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.toml-query_derive]
version = "0.10.0"
path = "./toml-query_derive/"

[dev-dependencies]
quickcheck = "0.9"
serde_derive = "1"

[workspace]
members = [ "toml-query_derive" ]
