[package]
name = "toml-query_derive"
version = "0.9.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]
description = "Proc-macro for toml-query"
license     = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
syn     = "1"
quote   = "1"
darling = "0.10"

[dev-dependencies]
serde        = "1"
serde_derive = "1"

